[package]
name = "pandoc-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
educe = "0.4"
imbl = { version = "2", features = ["serde"] }
im-rope = { path = "../im-rope", version = "0.2", features = ["serde"] }
internment = "0.7"
never = "0.1"
serde = {version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
serde_json = {version = "1.0", features = ["preserve_order"] }

[features]
arcintern = ["internment/arc"]